# osquery-extension

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  linux_packaging.yml  macos.yml  windows.yml
cmake/: codesigning.cmake  flags.cmake  options.cmake
components/: CMakeLists.txt
components/zeekendpointsecurity/: CMakeLists.txt
components/zeekendpointsecurity/include/zeek/: iendpointsecurityconsumer.h
components/zeekendpointsecurity/src/: endpointsecurityconsumer.cpp  endpointsecurityconsumer.h
components/zeekendpointsecurity/tests/: endpointsecurityconsumer.cpp
components/zeekopenbsm/: CMakeLists.txt
components/zeekopenbsm/include/zeek/: iopenbsmconsumer.h
components/zeekopenbsm/src/: openbsm_utils.cpp  openbsm_utils.h  openbsmconsumer.cpp  openbsmconsumer.h
components/zeekopenbsm/tests/: openbsmconsumer.cpp
components/zeekosqueryinterface/: CMakeLists.txt
components/zeekutils/: CMakeLists.txt
components/zeekutils/include/zeek/: network.h
components/zeekutils/src/: network.cpp  system_identifiers.cpp
libraries/: CMakeLists.txt
libraries/broker/: CMakeLists.txt
libraries/broker-legacy/: CMakeLists.txt
libraries/openssl/: CMakeLists.txt
packaging/: CMakeLists.txt
src/: configuration.cpp  main.cpp  zeekagent.cpp  zeekconnection.cpp  zeekconnection.h
tables/audisp/: CMakeLists.txt
tables/audisp/src/: fileeventstableplugin.cpp  fileeventstableplugin.h  processeventstableplugin.cpp  processeventstableplugin.h  socketeventstableplugin.cpp
tables/audisp/tests/: fileeventstableplugin.cpp
tables/endpointsecurity/: CMakeLists.txt
tables/endpointsecurity/src/: endpointsecurityservice.cpp  fileeventstableplugin.cpp  processeventstableplugin.cpp
tables/openbsm/: CMakeLists.txt
tests/: zeekconnection.cpp
(+5 files in other folders)
